--- a/natural_language.ipynb
+++ b/natural_language.ipynb
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "b9949517-7b0f-424f-ae06-d9a15b8a156f",
    "metadata": {
     "tags": []
@@ -1156,7 +1156,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnltk\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnltk\u001b[39;00m\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'nltk'"
      ]
     }
@@ -1167,150 +1167,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "23b1801b-5acb-4939-a537-09a32afe06a4",
+   "execution_count": 2,
+   "id": "300a2e17-392a-48fc-ad19-ac6973b6f39c",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Package                  Version\n",
-      "------------------------ ---------\n",
-      "aiofiles                 22.1.0\n",
-      "aiosqlite                0.19.0\n",
-      "anyio                    3.6.2\n",
-      "argon2-cffi              21.3.0\n",
-      "argon2-cffi-bindings     21.2.0\n",
-      "arrow                    1.2.3\n",
-      "asttokens                2.2.1\n",
-      "async-generator          1.10\n",
-      "attrs                    22.2.0\n",
-      "Babel                    2.12.1\n",
-      "backcall                 0.2.0\n",
-      "beautifulsoup4           4.12.2\n",
-      "bleach                   6.0.0\n",
-      "cachetools               5.3.0\n",
-      "certifi                  2022.12.7\n",
-      "cffi                     1.15.1\n",
-      "charset-normalizer       3.1.0\n",
-      "colorama                 0.4.6\n",
-      "comm                     0.1.3\n",
-      "contourpy                1.0.7\n",
-      "cycler                   0.11.0\n",
-      "debugpy                  1.6.7\n",
-      "decorator                5.1.1\n",
-      "defusedxml               0.7.1\n",
-      "executing                1.2.0\n",
-      "fastjsonschema           2.16.3\n",
-      "fonttools                4.39.3\n",
-      "fqdn                     1.5.1\n",
-      "h11                      0.14.0\n",
-      "idna                     3.4\n",
-      "ipykernel                6.22.0\n",
-      "ipython                  8.12.0\n",
-      "ipython-genutils         0.2.0\n",
-      "isoduration              20.11.0\n",
-      "jedi                     0.18.2\n",
-      "Jinja2                   3.1.2\n",
-      "json5                    0.9.11\n",
-      "jsonpointer              2.3\n",
-      "jsonschema               4.17.3\n",
-      "jupyter_client           8.2.0\n",
-      "jupyter_core             5.3.0\n",
-      "jupyter-events           0.6.3\n",
-      "jupyter_server           2.5.0\n",
-      "jupyter_server_fileid    0.9.0\n",
-      "jupyter_server_terminals 0.4.4\n",
-      "jupyter_server_ydoc      0.8.0\n",
-      "jupyter-ydoc             0.2.4\n",
-      "jupyterlab               3.6.3\n",
-      "jupyterlab-pygments      0.2.2\n",
-      "jupyterlab_server        2.22.1\n",
-      "kiwisolver               1.4.4\n",
-      "MarkupSafe               2.1.2\n",
-      "matplotlib               3.7.1\n",
-      "matplotlib-inline        0.1.6\n",
-      "mistune                  2.0.5\n",
-      "nbclassic                0.5.5\n",
-      "nbclient                 0.7.4\n",
-      "nbconvert                7.3.1\n",
-      "nbformat                 5.8.0\n",
-      "nest-asyncio             1.5.6\n",
-      "notebook                 6.5.4\n",
-      "notebook_shim            0.2.3\n",
-      "numpy                    1.24.3\n",
-      "outcome                  1.2.0\n",
-      "packaging                23.1\n",
-      "pandas                   2.0.1\n",
-      "pandocfilters            1.5.0\n",
-      "parso                    0.8.3\n",
-      "pefile                   2023.2.7\n",
-      "pickleshare              0.7.5\n",
-      "Pillow                   9.5.0\n",
-      "pip                      23.0.1\n",
-      "platformdirs             3.3.0\n",
-      "prometheus-client        0.16.0\n",
-      "prompt-toolkit           3.0.38\n",
-      "psutil                   5.9.5\n",
-      "pure-eval                0.2.2\n",
-      "py2exe                   0.13.0.0\n",
-      "pycparser                2.21\n",
-      "Pygments                 2.15.1\n",
-      "pyparsing                3.0.9\n",
-      "pyrsistent               0.19.3\n",
-      "PySocks                  1.7.1\n",
-      "python-dateutil          2.8.2\n",
-      "python-json-logger       2.0.7\n",
-      "pytz                     2023.3\n",
-      "pywin32                  306\n",
-      "pywinpty                 2.0.10\n",
-      "PyYAML                   6.0\n",
-      "pyzmq                    25.0.2\n",
-      "requests                 2.28.2\n",
-      "rfc3339-validator        0.1.4\n",
-      "rfc3986-validator        0.1.1\n",
-      "selenium                 4.8.2\n",
-      "Send2Trash               1.8.0\n",
-      "setuptools               65.5.0\n",
-      "six                      1.16.0\n",
-      "sniffio                  1.3.0\n",
-      "sortedcontainers         2.4.0\n",
-      "soupsieve                2.4.1\n",
-      "stack-data               0.6.2\n",
-      "terminado                0.17.1\n",
-      "tinycss2                 1.2.1\n",
-      "tornado                  6.3.1\n",
-      "traitlets                5.9.0\n",
-      "trio                     0.22.0\n",
-      "trio-websocket           0.9.2\n",
-      "tzdata                   2023.3\n",
-      "uri-template             1.2.0\n",
-      "urllib3                  1.26.14\n",
-      "wcwidth                  0.2.6\n",
-      "webcolors                1.13\n",
-      "webencodings             0.5.1\n",
-      "websocket-client         1.5.1\n",
-      "wsproto                  1.2.0\n",
-      "y-py                     0.5.9\n",
-      "ypy-websocket            0.8.2\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 23.0.1 -> 23.1.2\n",
-      "[notice] To update, run: C:\\Users\\daith\\AppData\\Local\\Programs\\Python\\Python311\\python.exe -m pip install --upgrade pip\n"
+     "ename": "NameError",
+     "evalue": "name 'english_stopwords' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43menglish_stopwords\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'english_stopwords' is not defined"
      ]
     }
    ],
    "source": [
-    "pip list"
+    "english_stopwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8edc9632-f479-422f-b4df-ad70377bb076",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'nltk'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnltk\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'nltk'"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk"
    ]
   }
  ],
